--- a/src/index.html
+++ b/src/index.html
@@ -84,23 +84,24 @@
         <div class="progress__list">
             <div class="progress__item">
                 <span class="progress__order-num">№3208957205790</span>
-                <div class="progress__bar">
-                    <span class="progress__bar-fill " style="width: 40%"></span>
-                    <span class="progress__value">40%</span>
+                <div class="progress__bar" data-progress="40">
+                    <span class="progress__bar-fill "></span>
+                    <span class="progress__value">0</span>
                 </div>
             </div>
             <div class="progress__item">
                 <span class="progress__order-num">№3208957205790</span>
-                <div class="progress__bar">
-                    <span class="progress__bar-fill progress__bar-fill_circle" style="width: 100%">
+                <div class="progress__bar" data-progress="100">
+                    <span class="progress__bar-fill">
                     </span>
-                    <span class="progress__value progress__value_right">100%</span>
+                    <span class="progress__value progress__value_right">0</span>
                 </div>
             </div>
         </div>
 
     </div>
 </div>
-<script src="index.js"></script>
+<script src="control.js"></script>
+<script src="progress.js"></script>
 </body>
 </html>
